update windows run script with flag to suppress error