@@ -1,3 +1,3 @@
 @echo off
 javac -cp ".;lib/sqlite-jdbc-3.51.2.0.jar" .\*.java
-java -cp ".;lib/sqlite-jdbc-3.51.2.0.jar" Driver
+java --enable-native-access=ALL-UNNAMED -cp ".;lib/sqlite-jdbc-3.51.2.0.jar" Driver
